Overhaul and simplify state presentation

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,6 +3,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -44,6 +45,7 @@
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceHeadline5"
             app:drawableEndCompat="@drawable/ic_arrow_drop_down_24dp"
+            tools:text="Melbourne"
             />
 
         <TextView
@@ -52,6 +54,7 @@
             android:layout_height="match_parent"
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceCaption"
+            tools:text="Updated 1 minute ago"
             />
 
       </LinearLayout>
@@ -80,12 +83,13 @@
       android:id="@+id/home_scroller"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:fillViewport="true"
       android:clipToPadding="false"
+      android:fillViewport="true"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >
 
-    <FrameLayout
+    <!-- TODO: Fix this resizing to the largest child. -->
+    <ViewFlipper
         android:id="@+id/home_contentContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -93,64 +97,11 @@
 
       <include layout="@layout/home_forecast" />
 
-      <LinearLayout
-          android:id="@+id/home_loading"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:paddingStart="32dp"
-          android:paddingEnd="32dp"
-          android:gravity="center_horizontal"
-          android:orientation="vertical"
-          android:visibility="gone"
-          >
+      <include layout="@layout/home_loading" />
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+      <include layout="@layout/home_error" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/home_loading"
-            android:textAppearance="?textAppearanceSubtitle1"
-            />
-
-      </LinearLayout>
-
-      <LinearLayout
-          android:id="@+id/home_error"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:paddingStart="32dp"
-          android:paddingEnd="32dp"
-          android:gravity="center_horizontal"
-          android:orientation="vertical"
-          android:visibility="gone"
-          >
-
-        <TextView
-            android:id="@+id/home_errorMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="16dp"
-            android:textAppearance="?textAppearanceSubtitle1"
-            app:drawableTopCompat="@drawable/ic_error_outline_48dp"
-            />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/home_retryButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/home_retryButton"
-            />
-
-      </LinearLayout>
-
-    </FrameLayout>
+    </ViewFlipper>
 
   </androidx.core.widget.NestedScrollView>
 
