--- a/app/src/main/res/layout/home_error.xml
+++ b/app/src/main/res/layout/home_error.xml
@@ -3,6 +3,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_error"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
@@ -40,7 +41,7 @@
       />
 
   <Button
-      android:id="@+id/home_error_retry_button"
+      android:id="@+id/home_error_retryButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:minWidth="200dp"
