--- a/app/src/main/res/layout/home_forecast.xml
+++ b/app/src/main/res/layout/home_forecast.xml
@@ -2,13 +2,12 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/home_forecastContainer"
+    android:id="@+id/home_forecast"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:divider="@drawable/home_divider"
     android:orientation="vertical"
     android:showDividers="middle"
-    android:visibility="gone"
     >
 
   <include layout="@layout/home_observations" />
