--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -88,11 +88,11 @@
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >
 
-    <!-- TODO: Fix this resizing to the largest child. -->
     <ViewFlipper
         android:id="@+id/home_contentContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:measureAllChildren="false"
         >
 
       <include layout="@layout/home_forecast" />
