Fix appearance of navigation bar pre API 27

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,7 @@
     <item name="colorScrim">@color/scrimLight</item>
     <item name="android:windowBackground">@color/backgroundBlue</item>
     <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
+    <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
   </style>
 
 </resources>
