--- a/app/src/main/res/layout/home_observations.xml
+++ b/app/src/main/res/layout/home_observations.xml
@@ -18,10 +18,10 @@
       android:layout_width="72dp"
       android:layout_height="72dp"
       android:contentDescription="@string/home_currentIconDesc"
-      app:tint="?attr/colorOnBackground"
       app:layout_constraintBottom_toBottomOf="@id/home_currentTemp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      app:tint="?attr/colorOnBackground"
       tools:src="@drawable/ic_weather_partly_cloudy_24dp"
       />
 
@@ -59,6 +59,28 @@
       />
 
   <TextView
+      android:id="@+id/home_humidityTitle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:text="@string/home_humidity"
+      android:textAppearance="@style/TextAppearance.SocketWeather.Headline5.Secondary"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/home_feelsLikeTitle"
+      />
+
+  <TextView
+      android:id="@+id/home_humidity"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:textAppearance="@style/TextAppearance.SocketWeather.MediumTemp"
+      app:layout_constraintBaseline_toBaselineOf="@id/home_humidityTitle"
+      app:layout_constraintStart_toEndOf="@id/home_humidityTitle"
+      tools:text="98%"
+      />
+
+  <TextView
       android:id="@+id/home_highTemp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -74,7 +96,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAppearance="@style/TextAppearance.SocketWeather.MediumTemp"
-      app:layout_constraintBaseline_toBaselineOf="@id/home_feelsLikeTitle"
+      app:layout_constraintBaseline_toBaselineOf="@id/home_humidityTitle"
       app:layout_constraintEnd_toEndOf="parent"
       tools:text="18°"
       />
@@ -99,7 +121,7 @@
       android:textAppearance="?attr/textAppearanceBody1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/home_feelsLikeTitle"
+      app:layout_constraintTop_toBottomOf="@id/home_humidityTitle"
       app:layout_goneMarginTop="0dp"
       app:lineHeight="22sp"
       tools:text="Cloudy. Medium (40%) chance of showers, most likely over eastern suburbs. Winds west to southwesterly 15 to 20 km/h becoming light in the early afternoon."
