Add UV protection times to observations

--- a/app/src/main/res/layout/home_observations.xml
+++ b/app/src/main/res/layout/home_observations.xml
@@ -63,10 +63,11 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
+      android:layout_marginEnd="24dp"
       android:layout_marginBottom="16dp"
       android:contentDescription="@string/home_humidityIconDesc"
       android:drawablePadding="8dp"
-      android:textAppearance="@style/TextAppearance.SocketWeather.SmallTemp"
+      android:textAppearance="@style/TextAppearance.SocketWeather.ExtraObservation"
       android:textColor="?android:textColorSecondary"
       app:drawableStartCompat="@drawable/ic_water_24dp"
       app:layout_constraintStart_toStartOf="parent"
@@ -79,16 +80,34 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="24dp"
-      android:layout_marginTop="16dp"
-      android:layout_marginBottom="16dp"
       android:contentDescription="@string/home_windIconDesc"
       android:drawablePadding="8dp"
-      android:textAppearance="@style/TextAppearance.SocketWeather.SmallTemp"
+      android:textAppearance="@style/TextAppearance.SocketWeather.ExtraObservation"
       android:textColor="?android:textColorSecondary"
       app:drawableStartCompat="@drawable/ic_weather_windy_24dp"
       app:layout_constraintBaseline_toBaselineOf="@id/home_humidity"
       app:layout_constraintStart_toEndOf="@id/home_humidity"
       tools:text="19 km/h NE"
+      />
+
+  <TextView
+      android:id="@+id/home_uvProtection"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="24dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginBottom="16dp"
+      android:contentDescription="@string/home_uvProtectionIconDesc"
+      android:drawablePadding="8dp"
+      android:ellipsize="end"
+      android:lines="1"
+      android:textAppearance="@style/TextAppearance.SocketWeather.ExtraObservation"
+      android:textColor="?android:textColorSecondary"
+      app:drawableStartCompat="@drawable/ic_weather_sunny_alert_24dp"
+      app:layout_constraintBaseline_toBaselineOf="@id/home_wind"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/home_wind"
+      tools:text="7 (Extreme)ffffffffffffffff"
       />
 
   <TextView
