--- a/app/src/main/res/values/styles_typography.xml
+++ b/app/src/main/res/values/styles_typography.xml
@@ -81,4 +81,9 @@
     <item name="android:textSize">18sp</item>
   </style>
 
+  <style name="TextAppearance.SocketWeather.ExtraObservation" parent="TextAppearance.MaterialComponents.Body1">
+    <item name="fontFamily">@font/roboto_slab_medium</item>
+    <item name="android:textSize">16sp</item>
+  </style>
+
 </resources>
