Update text appearance

--- a/app/src/main/res/layout/home_observations.xml
+++ b/app/src/main/res/layout/home_observations.xml
@@ -67,8 +67,7 @@
       android:layout_marginBottom="16dp"
       android:contentDescription="@string/home_humidityIconDesc"
       android:drawablePadding="8dp"
-      android:textAppearance="@style/TextAppearance.SocketWeather.ExtraObservation"
-      android:textColor="?android:textColorSecondary"
+      android:textAppearance="@style/TextAppearance.SocketWeather.ObservationExtra"
       app:drawableStartCompat="@drawable/ic_water_24dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/home_feelsLikeTitle"
@@ -82,8 +81,7 @@
       android:layout_marginStart="24dp"
       android:contentDescription="@string/home_windIconDesc"
       android:drawablePadding="8dp"
-      android:textAppearance="@style/TextAppearance.SocketWeather.ExtraObservation"
-      android:textColor="?android:textColorSecondary"
+      android:textAppearance="@style/TextAppearance.SocketWeather.ObservationExtra"
       app:drawableStartCompat="@drawable/ic_weather_windy_24dp"
       app:layout_constraintBaseline_toBaselineOf="@id/home_humidity"
       app:layout_constraintStart_toEndOf="@id/home_humidity"
@@ -101,8 +99,7 @@
       android:drawablePadding="8dp"
       android:ellipsize="end"
       android:lines="1"
-      android:textAppearance="@style/TextAppearance.SocketWeather.ExtraObservation"
-      android:textColor="?android:textColorSecondary"
+      android:textAppearance="@style/TextAppearance.SocketWeather.ObservationExtra"
       app:drawableStartCompat="@drawable/ic_weather_sunny_alert_24dp"
       app:layout_constraintBaseline_toBaselineOf="@id/home_wind"
       app:layout_constraintEnd_toEndOf="parent"
