Remove humidity observation if unavailable

--- a/app/src/main/res/layout/home_observations.xml
+++ b/app/src/main/res/layout/home_observations.xml
@@ -62,15 +62,12 @@
       android:id="@+id/home_humidity"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:layout_marginEnd="24dp"
-      android:layout_marginBottom="16dp"
       android:contentDescription="@string/home_humidityIconDesc"
       android:drawablePadding="8dp"
       android:textAppearance="@style/TextAppearance.SocketWeather.ObservationExtra"
       app:drawableStartCompat="@drawable/ic_water_24dp"
+      app:layout_constraintBaseline_toBaselineOf="@id/home_wind"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/home_feelsLikeTitle"
       tools:text="98%"
       />
 
@@ -79,12 +76,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="24dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginBottom="16dp"
       android:contentDescription="@string/home_windIconDesc"
       android:drawablePadding="8dp"
       android:textAppearance="@style/TextAppearance.SocketWeather.ObservationExtra"
       app:drawableStartCompat="@drawable/ic_weather_windy_24dp"
-      app:layout_constraintBaseline_toBaselineOf="@id/home_humidity"
       app:layout_constraintStart_toEndOf="@id/home_humidity"
+      app:layout_constraintTop_toBottomOf="@id/home_feelsLikeTitle"
+      app:layout_goneMarginStart="0dp"
       tools:text="19 km/h"
       />
 
@@ -148,7 +148,7 @@
       android:textAppearance="?attr/textAppearanceBody1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/home_humidity"
+      app:layout_constraintTop_toBottomOf="@id/home_wind"
       app:layout_goneMarginTop="0dp"
       app:lineHeight="22sp"
       tools:text="Cloudy. Medium (40%) chance of showers, most likely over eastern suburbs. Winds west to southwesterly 15 to 20 km/h becoming light in the early afternoon."
