--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,36 +2,12 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-  <style name="Base.Theme.SocketWeather" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+  <style name="Base.Theme.SocketWeather" parent="Theme.AppCompat.DayNight.NoActionBar">
     <item name="android:statusBarColor">@color/statusBar</item>
     <item name="android:navigationBarColor">@color/navigationBar</item>
-    <item name="textAppearanceHeadline1">@style/TextAppearance.SocketWeather.Headline1</item>
-    <item name="textAppearanceHeadline2">@style/TextAppearance.SocketWeather.Headline2</item>
-    <item name="textAppearanceHeadline3">@style/TextAppearance.SocketWeather.Headline3</item>
-    <item name="textAppearanceHeadline4">@style/TextAppearance.SocketWeather.Headline4</item>
-    <item name="textAppearanceHeadline5">@style/TextAppearance.SocketWeather.Headline5</item>
-    <item name="textAppearanceHeadline6">@style/TextAppearance.SocketWeather.Headline6</item>
-    <item name="textAppearanceSubtitle1">@style/TextAppearance.SocketWeather.Subtitle1</item>
-    <item name="textAppearanceSubtitle2">@style/TextAppearance.SocketWeather.Subtitle2</item>
-    <item name="textAppearanceBody1">@style/TextAppearance.SocketWeather.Body1</item>
-    <item name="textAppearanceBody2">@style/TextAppearance.SocketWeather.Body2</item>
-    <item name="textAppearanceButton">@style/TextAppearance.SocketWeather.Button</item>
-    <item name="textAppearanceCaption">@style/TextAppearance.SocketWeather.Caption</item>
-    <item name="textAppearanceOverline">@style/TextAppearance.SocketWeather.Overline</item>
   </style>
 
   <style name="Theme.SocketWeather" parent="Base.Theme.SocketWeather">
-    <item name="colorPrimary">@color/primaryBlue</item>
-    <item name="colorPrimaryVariant">@color/primaryBlueVariant</item>
-    <item name="colorOnPrimary">@color/black</item>
-    <item name="colorSecondary">@color/accentOrange</item>
-    <item name="colorSecondaryVariant">@color/accentOrangeVariant</item>
-    <item name="colorOnSecondary">@color/black</item>
-    <item name="colorSurface">@color/white</item>
-    <item name="colorOnSurface">@color/black</item>
-    <item name="colorHint">@color/primaryBlueVariant</item>
-    <item name="colorDivider">@color/color_on_background_12</item>
-    <item name="colorScrim">@color/scrimLight</item>
     <item name="android:windowBackground">@color/backgroundBlue</item>
     <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
     <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
