--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
   <style name="Base.Theme.SocketWeather" parent="Theme.AppCompat.DayNight.NoActionBar">
-    <item name="android:statusBarColor">@color/statusBar</item>
+    <item name="android:statusBarColor">@color/transparent</item>
     <item name="android:navigationBarColor">@color/navigationBar</item>
   </style>
 
