--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-  <style name="Base.Theme.SocketWeather" parent="Theme.AppCompat.DayNight.NoActionBar">
+  <style name="Base.Theme.SocketWeather" parent="android:Theme.DeviceDefault.NoActionBar">
     <item name="android:statusBarColor">@color/transparent</item>
     <item name="android:navigationBarColor">@color/navigationBar</item>
   </style>
