Use system colorControlNormal tint

--- a/app/src/main/res/drawable/ic_water_24dp.xml
+++ b/app/src/main/res/drawable/ic_water_24dp.xml
@@ -5,6 +5,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="?android:colorControlNormal"
     >
 
   <path
