--- a/app/src/main/res/drawable/ic_rain_chance_24dp.xml
+++ b/app/src/main/res/drawable/ic_rain_chance_24dp.xml
@@ -4,6 +4,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="?android:colorControlNormal"
     >
   <path
       android:fillColor="#FF00FF"
