--- a/app/src/main/res/drawable/ic_terrain_48dp.xml
+++ b/app/src/main/res/drawable/ic_terrain_48dp.xml
@@ -4,6 +4,7 @@
     android:height="48dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="?android:colorControlNormal"
     >
 
   <path
