--- a/app/src/main/res/drawable/ic_water.xml
+++ b/app/src/main/res/drawable/ic_water.xml
@@ -4,6 +4,7 @@
     android:height="18dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="?android:colorControlNormal"
     >
 
   <path
