--- a/app/src/main/res/drawable/ic_weather_sunny_alert_24dp.xml
+++ b/app/src/main/res/drawable/ic_weather_sunny_alert_24dp.xml
@@ -1,10 +1,10 @@
-<!-- drawable/weather_sunny_alert.xml -->
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="?android:colorControlNormal"
     >
 
   <path
