--- a/app/src/main/res/color-v31/widget_line.xml
+++ b/app/src/main/res/color-v31/widget_line.xml
@@ -2,6 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <item android:alpha="0.12" android:color="?android:colorControlNormal" />
+  <item android:alpha="0.12" android:color="@android:color/system_accent1_800" />
 
 </selector>
