--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,11 @@
   <color name="translucentGrey">#5555</color>
   <color name="transparent">#00000000</color>
 
+  <color name="widgetBackground">#fffffbfe</color>
+  <color name="widgetOnBackground">#ff1c1b1f</color>
+  <color name="widgetOnBackgroundSecondary">#ff49454f</color>
+  <!-- Use underscore to match color resource file. -->
+  <color name="widget_line">#3040484d</color>
+  <color name="widgetAccent">#ff64b5f6</color>
+
 </resources>
