--- a/app/src/main/res/values-night-v31/colors.xml
+++ b/app/src/main/res/values-night-v31/colors.xml
@@ -3,7 +3,8 @@
 <resources>
 
   <color name="widgetBackground">@android:color/system_neutral1_900</color>
-  <color name="widgetOnBackground">@android:color/system_accent1_100</color>
+  <color name="widgetBackgroundInner">@android:color/system_neutral2_700</color>
+  <color name="widgetOnBackground">@android:color/system_neutral1_100</color>
   <color name="widgetOnBackgroundSecondary">@android:color/system_neutral2_200</color>
   <color name="widgetAccent">@android:color/system_accent1_200</color>
 
