--- a/app/src/main/res/xml/forecast_widget.xml
+++ b/app/src/main/res/xml/forecast_widget.xml
@@ -3,15 +3,15 @@
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/widget_description"
-    android:maxResizeHeight="450dp"
-    android:maxResizeWidth="570dp"
-    android:minHeight="110dp"
-    android:minResizeHeight="48dp"
-    android:minResizeWidth="48dp"
-    android:minWidth="140dp"
-    android:resizeMode="horizontal|vertical"
+    android:minResizeWidth="80dp"
+    android:minResizeHeight="50dp"
+    android:minWidth="130dp"
+    android:minHeight="220dp"
+    android:targetCellWidth="2"
     android:targetCellHeight="2"
-    android:targetCellWidth="3"
-    android:updatePeriodMillis="10800000"
+    android:maxResizeHeight="600dp"
+    android:maxResizeWidth="600dp"
+    android:resizeMode="horizontal|vertical"
+    android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"
     />
